--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
         .text {
             color: whitesmoke;
-            font-family: 'Lato', sans-serif;
+            font-family: 'Lato', fantasy;
             font-weight: 300;
             font-style: italic;
             text-align: center;
