--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 <div class="text">
     <!--<h1>happy birthday!</h1>-->
     <p>To Yoga：</p>
-    <p>Happy birthday ~ wish you the future work in Chengdu with the life you want. Give you a CSS cake.</p>
+    <p>Happy birthday ~ Wish you the future work in Chengdu with the life you want. Give you a CSS cake.</p>
 </div>
 
 </body>
